feat(portfolio-lab): add benchmark comparison component
- Create BenchmarkComparison.tsx comparing user portfolio to:
  - S&P 500 (100% US stocks)
  - 60/40 portfolio (60% stocks, 40% bonds)
  - Age-based target (100 - age rule)
- Visual stacked bar charts for allocation comparison
- Risk-adjusted metrics table (return, volatility, Sharpe, max drawdown)
- Dynamic insights based on portfolio characteristics
- Integrated into Portfolio Lab Analysis tab

--- a/memory/2026-02-09.md
+++ b/memory/2026-02-09.md
@@ -120,4 +120,27 @@ Recommendation: Plan 1-2 cleanup sprints before Jon's clients see it.
 
 ---
 
+## 10:40 AM — Tech Debt + Expansion Sprint
+
+Sam requested Pantheon focus on tech debt and expansion.
+
+**Agents Spawned:**
+1. **pantheon-market-debug** — Fix Markets widget showing "—" for stocks
+2. **pantheon-benchmark-compare** — Add benchmark comparison (S&P 500, 60/40)
+3. **pantheon-income-analysis** — Dividend yield + projected income
+4. **pantheon-fragility-holdings** — Connect fragility to real user holdings
+
+**Identified TODOs:**
+- Look-through exposure (fund holdings) in portfolio-lab
+- Tax-alpha state rate hardcoded
+- Plaid save to database
+- Multiple data-provider stubs (risk, retirement, etc.)
+
+**Large files needing refactor:**
+- profile/setup: 3,094 lines
+- portfolio-lab: 2,908 lines
+- portfolio-optimizer: 1,525 lines
+
+---
+
 *Compound learning in action: 20+ features, infrastructure improvements, strategic clarity — all in one day.*
