tweak(pitch): reframe advantage as vision + user understanding

--- a/memory/2026-02-09.md
+++ b/memory/2026-02-09.md
@@ -143,4 +143,57 @@ Sam requested Pantheon focus on tech debt and expansion.
 
 ---
 
+## Afternoon Session: Pitch Deck Rewrite + GitHub Outage
+
+### GitHub Outage (5+ hours)
+- Started ~11:30 AM EST, still ongoing at 2:30 PM
+- Status: "Partial System Outage" / "Minor Service Outage"
+- Vercel couldn't clone repo — all deploys failing after 1 second
+- Created monitoring cron to check every 5 min
+
+### Pitch Deck Major Rewrite
+Sam requested reframe around actual go-to-market strategy:
+
+**Removed:**
+- Robo-advisor positioning (don't compare to robos)
+- Team slide
+
+**New Structure (11 slides):**
+1. Title — "The Intelligence Layer for Wealth"
+2. Problem — Fragmentation (advisors juggle 8+ tools, nothing learns)
+3. Vision — "Maven is the Palantir of wealth" (intelligence OS)
+4. Maven Partners — Our RIA first, tip of the spear, real clients day one
+5. The Arsenal — Fragility Index, What-If, Tax Intelligence, Oracle
+6. **Human + AI** — NEW: Planners with planning/tech/psychology expertise
+7. Flywheel — Maven Intelligence learns from every interaction
+8. Roadmap — Partners NOW → Basic/Pro Q3 → SaaS for RIAs at scale
+9. Why Now — AI threshold, AI-native architecture, unfair advantages
+10. Where We Are — Platform built, RIA launching Q2
+11. CTA — Let's talk
+
+### Human + AI Strategic Insight
+Sam's vision for scaling:
+- Hire financial planners with THREE competencies:
+  1. **Planning expertise** — tax, retirement, estate (the technical foundation)
+  2. **Technology fluency** — native comfort with AI, push/question/improve Maven
+  3. **Behavioral psychology** — understand emotional mistakes (fear, greed, loss aversion)
+- AI handles analysis & optimization
+- Human handles behavior & coaching
+- Together = superhuman advisor
+- This combination is rare → that's the moat
+
+### Vercel Discovery (IMPORTANT)
+Found TWO Vercel projects connected to same GitHub repo:
+- **Production – maven-fscq** → ✅ SUCCEEDING (green checkmarks)
+- **Production – dashboard** → ❌ FAILING (red X's)
+
+We were checking the wrong project! The maven-fscq project is actually deploying successfully. Need to:
+1. Find the maven-fscq production URL
+2. Either point mavenwealth.ai to correct project OR delete broken dashboard project
+
+### Data Validation Issue
+Stock indices (SPY, QQQ, DIA, IWM) showing dashes in Markets widget. Crypto (BTC, TAO) works fine. Likely Yahoo Finance API issue — separate from GitHub outage.
+
+---
+
 *Compound learning in action: 20+ features, infrastructure improvements, strategic clarity — all in one day.*
