fix: correct share counts using ACTUAL live prices (Feb 10, 2026)
Previous fix used stale/wrong price estimates. Now using actual API prices:
- TAO: $155.48 (was using $156 - close)
- VTI: $342.64 (was using $289 - 19% off!)
- VOO: $638.23 (was using $555 - 15% off!)
- CIFR: $16.76 (was using $6.45 - 160% off!)
- IREN: $46.15 (was using $12.80 - 260% off!)
- VXUS: $82.15 (was using $64.85 - 27% off!)
- VWO: $57.75 (was using $45.20 - 28% off!)

New share counts for ~$700K holdings:
- VTI: 440 shares (~$151K)
- TAO: 645 tokens (~$100K)
- VOO: 125 shares (~$80K)
- BND: 810 shares (~$60K)
- VXUS: 610 shares (~$50K)
- CIFR: 2,400 shares (~$40K)
- IREN: 870 shares (~$40K)
- VNQ: 430 shares (~$40K)
- VWO: 350 shares (~$20K)

Total: ~$581K holdings + $90K cash + $130K in accounts = ~$800K

Also updated fallback prices in stock-quote API.

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -26,12 +26,26 @@ Sam frustrated that demo data still inconsistent despite agent claiming "10 page
 - Orchestrator MUST open browser and verify actual output
 - Compare across pages for data consistency fixes
 
-### Status
-Deploy pushed, waiting for Vercel propagation (~8:05am push). Expected results once live:
-- TAO at $354,900 as top holding
-- Crypto allocation ~42%
-- Net worth ~$920K
-- Consistent across Dashboard and Portfolio Lab
+### First Fix Attempt (Wrong Approach)
+Disabled live prices for demo - Sam correctly pushed back: "Who cares if crypto is volatile? We NEED live prices or we lose credibility."
+
+### Second Fix (Correct Approach) - 8:15am
+1. **Re-enabled live prices everywhere**
+2. **Updated demo portfolio with realistic share counts:**
+   - TAO: 962 tokens (was 105) → ~$150K at $156/token
+   - VTI: 620 shares → ~$179K
+   - VOO: 145 shares → ~$80K
+   - BND: 830 shares → ~$60K
+   - CIFR: 7,750 shares → ~$50K
+   - IREN: 3,900 shares → ~$50K
+   - VXUS: 700 shares → ~$45K
+   - VWO: 550 shares → ~$25K
+   - VNQ: 450 shares → ~$40K
+3. **Added fallback prices** for CIFR, IREN, VXUS, VWO to stock-quote API
+
+Deploy pushed: commit `b019d61`
+
+**Lesson:** The problem was never "live prices are bad" — it was that our demo data had fantasy numbers. Fix the data, not the feature.
 
 ---
 
