docs: capture learnings L029-L032 from deploy debugging session
- L029: Verify agent work before reporting success
- L030: Fetch REAL data before making calculations
- L031: Don't disable features to fix data problems
- L032: Verify deploy pipeline before assuming success

Also updated ANTI-PATTERNS.md and SPAWN-CHECKLIST.md

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -47,6 +47,44 @@ Deploy pushed: commit `b019d61`
 
 **Lesson:** The problem was never "live prices are bad" — it was that our demo data had fantasy numbers. Fix the data, not the feature.
 
+### Third Fix (Correct Prices) - 8:20am
+Fetched ACTUAL current prices from API, found my estimates were wildly wrong:
+- CIFR: I estimated $6.45, actual $16.76 (160% off!)
+- IREN: I estimated $12.80, actual $46.15 (260% off!)
+- VTI: I estimated $289, actual $342.64 (19% off)
+
+Updated all share counts with correct math. Commit `f8c78e3` pushed.
+
+### Deploy Pipeline Issue Discovered
+Vercel deploys were FAILING silently. I pushed 3 commits but none reached production.
+- `dashboard` project (mavenwealth.ai) showed "Deployment Failed"
+- Had to alert Sam to check Vercel logs manually
+
+---
+
+## Learnings Captured (L029-L032)
+
+1. **L029 — Verify Agent Work Before Reporting Success**
+   - Never accept "build passes" as proof of correctness
+   - Open browser, verify actual displayed values
+
+2. **L030 — Fetch REAL Data Before Making Calculations**
+   - ALWAYS fetch current prices before calculating
+   - Never use estimates, cached values, or "what I remember"
+
+3. **L031 — Don't Disable Features to Fix Data Problems**
+   - Live data features are CREDIBILITY
+   - Fix underlying static data instead of disabling features
+
+4. **L032 — Verify Deploy Pipeline Before Assuming Success**
+   - Local build pass ≠ production deploy
+   - Check Vercel dashboard after every push
+
+## Updated Protocols
+- Added L029-L032 to LEARNINGS-v2.md
+- Added 5 new anti-patterns to ANTI-PATTERNS.md
+- Added "Deploy Pipeline" and "Real Data" checks to SPAWN-CHECKLIST.md
+
 ---
 
 ## Major Accomplishments
