docs: capture L033 (vercel.json cannot configure rootDirectory) + update daily memory
- Added L033 to LEARNINGS-v2.md
- Documented full Vercel deploy fix in 2026-02-10.md
- Deploy pipeline now working: Root Directory + vercel.json schema fix
- Deleted duplicate projects (maven-fscq, maven)
- Demo data now consistent across Dashboard and Portfolio Lab

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -231,4 +231,65 @@ BACKLOG → SELECTOR → COST CHECK → SPAWN AGENT → QUALITY GATE → SHIP/ES
 
 ---
 
-*Pantheon v3.2 is live. Autonomous build test begins at 11am. This is breakaway speed.*
+---
+
+## VERCEL DEPLOY PIPELINE FIX (Late Morning)
+
+### Problem Discovery
+Deploy pipeline had been broken for 10+ hours. All GitHub push deploys were failing with "Error".
+- 15+ failed deploys stacked up
+- Production was only running because of manual `vercel deploy` CLI from 10h ago
+
+### Root Causes (TWO issues!)
+
+**Issue 1: Wrong Root Directory in Vercel Settings**
+- Vercel Build Settings had Root Directory: `apps/dashboard`
+- Correct path: `maven/apps/dashboard`
+- The `apps/` folder exists inside `maven/`, not at repo root
+
+**Issue 2: Invalid `vercel.json` Schema**
+- I had added `projectSettings.rootDirectory` to vercel.json
+- Error: "should NOT have additional property `projectSettings`"
+- Root Directory must be configured in Vercel UI, NOT in vercel.json
+
+### The Fixes
+
+1. **Updated Vercel Build Settings** (via browser)
+   - Changed Root Directory: `apps/dashboard` → `maven/apps/dashboard`
+   - Saved settings
+
+2. **Fixed vercel.json** (commit `4845b07`)
+   - Removed invalid `projectSettings` key
+   - Kept only valid config (headers, $schema)
+
+### Cleanup: Deleted Duplicate Projects
+
+Found 3 Vercel projects for same repo (confusing!):
+- `dashboard` (mavenwealth.ai) — KEEP (production)
+- `maven-fscq` — DELETED (duplicate, actively failing)
+- `maven` (maven-three-amber.vercel.app) — DELETED (old, disconnected)
+
+Now only ONE project exists: `dashboard` → mavenwealth.ai
+
+### Result
+- Deploy **Nb5PHP697** succeeded! ✅
+- Build time: 53 seconds
+- Production now auto-deploys on push to `main`
+- mavenwealth.ai shows correct demo data
+
+### Data Consistency VERIFIED
+- Dashboard: Net Worth **$663,389.80**, TAO: 645 tokens @ **$100,110**
+- Portfolio Lab: Total **$664,183.15**, TAO: **$100,903** (live price fluctuation)
+- Consistency: ✅ Both pages show same holdings, within live price variance
+
+### Learning: L033 Added
+
+**vercel.json Cannot Configure Root Directory**
+- `rootDirectory` is a Vercel project setting, NOT a vercel.json property
+- Must be set via: Vercel Dashboard > Settings > Build & Deployment
+- If you need it in repo, use `vercel.json` for other settings and configure rootDirectory separately
+- Schema validation will reject unknown properties
+
+---
+
+*Pantheon v3.2 is live. Autonomous build test begins at 11am. Deploy pipeline restored. This is breakaway speed.*
