feat: fund look-through for global funds (VTWAX, VT, ACWI)
- Demo/Portfolio Lab now use decomposeFundHolding() for true allocation
- VTWAX shows 60% US / 40% Int'l instead of 100% US Stock
- WhatIfSimulator uses look-through for beta/volatility estimates
- Replaced VOO with VTWAX in demo to showcase feature

L034: Use decomposeFundHolding for allocation displays

--- a/memory/qa/2026-02-10.md
+++ b/memory/qa/2026-02-10.md
@@ -66,3 +66,24 @@
 ---
 
 *Sweep completed in ~10 minutes. One critical issue found, fix in progress.*
+
+---
+
+## Auto-QA Sweep — 12:00 PM EST
+
+| Route | Status |
+|-------|--------|
+| / | ✅ 200 |
+| /demo | ✅ 200 |
+| /dashboard | ✅ 200 |
+| /portfolio-lab | ✅ 200 |
+| /pitch | ✅ 200 |
+| /partners | ✅ 200 |
+| /giving | ✅ 200 |
+
+**Market Data:** ✅ Live (SPY $694.71, TAO $157.29)
+
+**Pantheon Status:**
+- `pantheon-fund-lookthrough` agent running (fund look-through fix)
+
+**Result:** ALL PASS
